0.20 2014-03-30
    - Added PkgVersion so dzil will version the packages!

0.19 2014-03-30

0.18-TRIAL  2014-03-26
    - Major overhaul
      - fixed circular references
      - full, non-blocking IO for Twitter API callsv
      - Many fixes by Peter Roberts (Thank you!)

0.17 2014-01-18
    - Enable SSL for Twitter API calls

0.16 2013-06-13
    - initial Twitter API v1.1 support (BinGOs)

0.15 2012-05-09
    - Fixed: exit server on disconnect
    - Bumped requried version of MooseX::POE (resovles failed CPAN Testers report)

0.14 2012-05-08
    - use Twitter User Streams API instead of polling
    - use PIN based Twitter OAuth authentication (Twitter dropped our xAuth access)
    - simplified configuration (config and state files are now optional)
    - add proper POE fork code (Apocalypse)

0.13 2010-12-10
    - added command `rt` alias for `retweet`
    - treat Twitter status IDs as strings (they now exceed Int capacity on 32-bit systems)
    - fixed: irc_server_bindaddr type constraint
    - updated dependencies
    - filter bogus results from user_timeline (twitter bug)

0.12 2010-08-23
    - added dependency on MooseX::AttributeHelpers

0.11 2010-08-21
    - Use OAuth
    - Show full text of retweeted messages
    - usage messages for retry/retweet commands
    - Added search plugin (Adam Prime)
    - Let plugins specify traits for Net::Twitter (Adam Prime)
    - Added reply command (sets in_relpy_to_status_id)
    - Use home_timeline instead of friends_timeline
    - Added retweet command for official Twitter retweets
    - Added report_spam command

0.10 2009-11-02
    - Replaced Text::Truncate with String::Truncate

0.09 2009-09-25
    - Replaced "page" parameter usage with "cursor" (friends/followers)
    - Fixed missing sprintf in whois handler

0.08 2009-08-17
    - Fixed: s/irc_alias/twitter_alias/
    - Fixed: dereferencing an undefiend user object

0.07 2009-07-21
    - Use Net::Twitter 3.x with native error handling and object inflation